EPMECO-20777: create class that sets properties directly on a Schema.Field's generic map node and refractor